# agent-rag-v2

./: .gitignore  README.md  code.py  code_v2.py  config.py  escopo.md  main.py  pyproject.toml
