[project]
name = "agno-rag-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.4.8",
    "google-genai>=1.62.0",
    "lancedb>=0.29.2",
    "pandas>=3.0.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.7.0",
    "pytest>=9.0.2",
    "rich>=14.3.2",
    "typer>=0.21.1",
]
